--- a/index.html
+++ b/index.html
@@ -203,8 +203,19 @@
   <div class="row">
     <section class='col-xs-12 col-sm-6 col-md-6'>
       <section>
-        <h2>Jeśli jesteś zainteresowany środowiskiem labowym/testowym na potrzeby nauki zagadneń związanych z Openshift</h2>
-          <p>Napisz na piotr.stolarek@stolarware</p>
+        <h2>Jeśli jesteś zainteresowany środowiskiem labowym/testowym na potrzeby nauki zagadneń związanych z OKD/Openshift lub profesjonalnym szkoleniem z tego zakresu to</h2>
+
+          <p>napisz na piotr.stolarek@stolarware.pl</p>
+	  <p>lub zadzwoń: +48 530 772 371</p>
+
+	  <h3>Po uprzednim umówieniu, dostępne są szkolenia nawet z przekazaniem całego środowiska labowego (serwery RACK ze środowiskiem wirtualizacyjnym oVirt oraz maszynami wirtualnymi OKD). Szkolenie może obejmować także podstawy Kubernetes, które przydadzą się przy dalszym rozwoju z dowolnym produktem PaaS. Materiały stanowią szeroko dostępne znane i uznane tytuły branżowe, które przerabiamy na zajęciach pod kątem niezbednego minimum. Nie dostaniesz od nas 'zlepka powycinanych materiałów', ale profesjonalny kurs, który w prawdziwych branżowych "bibliach" pokaże najistotnijsze elementy i po prostu nauczy tego materiału od strony praktycznej. Kurs prowadzi certyfikowany specjalista egzaminów Redhat dotyczących zagadnień Openshift <p>(EX280, EX425) - Piotr Stolarek <a href="https://rhtapps.redhat.com/verify/?certId=100-115-997">weryfikacja</a></p></h3>
+	  <p><ul>
+<li>Pierwsze zajęcia są darmowe, nie zobowiązują do kontynuacji kursu, który w wersji podstawowej trwa 2 weekendy (4x8h). To Ty ocenisz, czy to co mówię Ci się przyda, pasuje i czy będziesz chciał za to dalej płacić.</li>
+<li>Na zajęcia otrzymasz środowisko labowe oraz książki niezbedne do realizacji kursu.</li>
+<li>Całkowity koszt kursu w wersji podstawowej to 1900 zł. Program może być indywidualnie dostosowany do Twoich potrzeb. Dla 2 osób cena za całość to 3200 zł.</li>
+</ul>
+     <p>Jesteś już gotowy na podjęcie prawdziwej nauki, a nie tylko na samouspokajające zapewnienia, że obejrzanych kilka filmików sptawi, że czegoś nowego w świecie konteneryzacji się nauczyłeś? Zadzwoń lub napisz!</p>
+     <p> Wszystko jest do ustalenia i jeśli jesteś gotowy na solidną dawkę materiału to zapraszam!</p>
       </section>
     </section>
     <section class="col-xs-12 col-sm-6 col-md-6">
