--- a/index.html
+++ b/index.html
@@ -198,34 +198,35 @@
 
  <section class='container'>
   <hgroup>
-    <h1>Witamy w Stolarware</h1>
+    <h1>Witam w Stolarware!</h1>
   </hgroup>
   <div class="row">
     <section class='col-xs-12 col-sm-6 col-md-6'>
       <section>
-        <h2>Jeśli jesteś zainteresowany środowiskiem labowym/testowym na potrzeby nauki zagadneń związanych z OKD/Openshift lub profesjonalnym szkoleniem z tego zakresu to</h2>
-
-          <p>napisz na piotr.stolarek@stolarware.pl</p>
-	  <p>lub zadzwoń: +48 530 772 371</p>
-
-	  <h3>Po uprzednim umówieniu, dostępne są szkolenia nawet z przekazaniem całego środowiska labowego (serwery RACK ze środowiskiem wirtualizacyjnym oVirt oraz maszynami wirtualnymi OKD). Szkolenie może obejmować także podstawy Kubernetes, które przydadzą się przy dalszym rozwoju z dowolnym produktem PaaS. Materiały stanowią szeroko dostępne znane i uznane tytuły branżowe, które przerabiamy na zajęciach pod kątem niezbednego minimum. Nie dostaniesz od nas 'zlepka powycinanych materiałów', ale profesjonalny kurs, który w prawdziwych branżowych "bibliach" pokaże najistotnijsze elementy i po prostu nauczy tego materiału od strony praktycznej. Kurs prowadzi certyfikowany specjalista egzaminów Redhat dotyczących zagadnień Openshift <p>(EX280, EX425) - Piotr Stolarek <a href="https://rhtapps.redhat.com/verify/?certId=100-115-997">weryfikacja</a></p></h3>
+	      <h3>Jeśli jesteś zainteresowany środowiskiem labowym/testowym na potrzeby nauki zagadneń związanych z OKD/Openshift lub <b>profesjonalnym szkoleniem</b> z tego zakresu to napisz na <b>piotr.stolarek@stolarware.pl</b> lub zadzwoń: <b>+48 530 772 371.</b></h3>
+	      <h3>Po uprzednim umówieniu, dostępne są szkolenia nawet z przekazaniem całego środowiska labowego (serwery rack ze środowiskiem wirtualizacyjnym oVirt oraz maszynami wirtualnymi OKD). Szkolenie podstawowe obejmuje tak naprawdę podstawy konteneryzacji, Kubernetes oraz Openshift/OKD. Materiały stanowią szeroko dostępne znane i uznane tytuły branżowe, które przerabiam na zajęciach pod kątem niezbędnego minimum teoretycznego oraz przyszłej referencji. Podczas szkolenia pokażę Ci jak korzystać z tych materiałów, zwrócę uwagę na najistotnijsze elementy uzupełnione o przygotowane na bazie własnego doświadczenia przykłady i po prostu nauczę Cię tego materiału od strony praktycznej. Kurs prowadzę osobiście jako certyfikowany specjalista egzaminów Redhat dotyczących zagadnień Openshift (<b>EX280, EX425</b>), który już w 2010 zdobył tytuł <b>RHCE (Red Hat Certified Engineer)</b>, a w 2015 <b>RHCA (Red Hat Certified Architect) - </b>Piotr Stolarek <a href="https://rhtapps.redhat.com/verify/?certId=100-115-997">weryfikacja</a></h3>
 	  <p><ul>
-<li>Pierwsze zajęcia są darmowe, nie zobowiązują do kontynuacji kursu, który w wersji podstawowej trwa 2 weekendy (4x8h). To Ty ocenisz, czy to co mówię Ci się przyda, pasuje i czy będziesz chciał za to dalej płacić.</li>
-<li>Na zajęcia otrzymasz środowisko labowe oraz książki niezbedne do realizacji kursu.</li>
-<li>Całkowity koszt kursu w wersji podstawowej to 1900 zł. Program może być indywidualnie dostosowany do Twoich potrzeb. Dla 2 osób cena za całość to 3200 zł.</li>
+		  <li><b>Pierwsze zajęcia kosztują jedynie 200 zł i w ramach tej kwoty dostaniesz książki za ~150 zł + oczywiście 8h szkolenia!</b> Nie zobowiązują one do kontynuacji kursu, który w wersji podstawowej trwa 2 weekendy (4x8h). To Ty ocenisz, czy to co mówię Ci się przyda, pasuje i czy będziesz chciał za to dalej płacić. Jeśli chcesz, książki możesz zakupić we własnym zakresie i wtedy za <b>pierwsze 8-godzinne zajęcia płacisz 50 zł.</b></li>
+<li>Na zajęciach otrzymasz środowisko labowe oraz książki niezbędne do realizacji kursu. Kurs z założenia jest kursem stacjonarnym, gdyż wierzę, że przy moim zaangażowaniu w prowadzenie zajęć, ta forma jest bardziej efektywna.</li>
+<li>Całkowity koszt kursu w wersji podstawowej to 2200 zł. Program może być indywidualnie dostosowany do Twoich potrzeb. Dla 2 osób cena za całość to 3800 zł.</li>
 </ul>
-     <p>Jesteś już gotowy na podjęcie prawdziwej nauki, a nie tylko na samouspokajające zapewnienia, że obejrzanych kilka filmików sptawi, że czegoś nowego w świecie konteneryzacji się nauczyłeś? Zadzwoń lub napisz!</p>
-     <p> Wszystko jest do ustalenia i jeśli jesteś gotowy na solidną dawkę materiału to zapraszam!</p>
+<h3>Jesteś już gotowy na podjęcie prawdziwej nauki, a nie tylko na samouspokajające zapewnienia, że obejrzanych kilka filmików sprawiło, że czegoś nowego w świecie konteneryzacji się nauczyłeś? Zadzwoń lub napisz! Wszystko jest do ustalenia i jeśli jesteś gotowy na solidną dawkę materiału to zapraszam do kontaktu!</h3>
       </section>
     </section>
     <section class="col-xs-12 col-sm-6 col-md-6">
-      <h3>Dodatkowe informacje o projekcie</h3>
+      <h3>Książki, które otrzymasz podczas pierwszych zajęć:</h3>
       <ul>
-        <li><a href="https://developers.openshift.com">Developer Center</a></li>
-        <li><a href="https://docs.openshift.com">Documentation</a></li>
-        <li><a href="https://www.openshift.com/forums/openshift">OpenShift forums</a></li>
-        <li><a href="http://stackoverflow.com/questions/tagged/openshift">Stack Overflow questions for OpenShift</a></li>
-        <li><a href="http://webchat.freenode.net/?randomnick=1&channels=openshift&uio=d4">IRC channel at #openshift on freenode.net</a></li>
+	      <li><b>Kubernetes - Tworzenie niezawodnych systemów rozproszonych</b> - Brendan Burns, Joe Beda, Kelsey Hightower, 2020, Helion</li>
+	      <li><b>Kuberneres - Rozwiązania chmurowe w świecie DevOps</b> - John Arundel, Justin Domingos, 2021, Helion</li>
+	      <li><b>Projektowanie systemów rozproszonych</b> - Brendan Burns, 2018, Helion</b></li>
+      </ul>
+      <h3>Dodatkowe informacje o tematyce pierwszych zajęć:</h3>
+      <ul>
+	      <li>Wprowadzenie do narzędzi <b>podman</b>, <b>skopeo</b>, <b>buildah</b> jako naturalne zastępstwo dla <b>dockera</b></li>
+	      <li>Deployment prostej aplikacji na platformie Openshift/OKD przy użyciu <b>oc new-app</b></li>
+	      <li>Analiza różnych wariantów deploymentu aplikacji na Openshift/OKD, przegląd obiektów powstałych podczas różnych metod budowy podów</li>
+	      <li>Własnoręczne tworzenie niektórych obiektów Kubernetes (DeploymentConfig, Pod, StatefulSet, etc.)</li>
+	      <li>Przenoszenie obrazów pomiędzy repozytoriami publiczymi/prywatnymi, a Openshiftem/OKD</li>
       </ul>
     </section>
   </div> 
